# rt6502-emulator

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  flake.nix
6502/: CMakeLists.txt
6502/include/6502/: 6502.h  addressing_mode.h  cpu.h  decode.h  instruction_set.h  memory.h  types.h
6502/src/: 6502.cpp  addressing_mode.cpp  cpu.cpp  decode.cpp  instruction_set.cpp  memory.cpp
UI/: CMakeLists.txt
UI/src/: main.cpp
